intTests/test_parse_errors/lexer004.log.good
 Loading file "lexer004.saw"
 Parse error at lexer004.saw:9:20-9:21: Unexpected `+'
FAILED
