intTests/test_parse_errors/lexer004.saw
// Currently comment delimiters in Cryptol blocks are not recognized
// by the saw-script lexer; they're treated as part of the block and
// handled by the Cryptol lexer downstream. This has some odd
// consequences. See issue #2189.
//
// This currently fails with "unexpected +" because the // isn't
// seen.

let x = {{ // 3 }} + 4;


